Sun May 31 23:28:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): checks for duplication of source
	  files.

Sun May 31 23:26:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (istrailinggarbage): fixed typo.

Fri May 29 17:10:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (Init_Struct): made #to_s an alias to #inspect to
	  reduce the result of recursive struct.  a patch from ujihisa a
	  [ruby-dev:38554].

Fri May 29 17:08:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (Init_Hash): made #to_s an alias to #inspect to reduce
	  the result of recursive hash.  a patch from ujihisa a
	  [ruby-core:23601].  [ruby-dev:38555]

Fri May 29 09:30:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (collect_all): checks interrupts.  [ruby-core:23594]

Thu May 28 07:39:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (THREAD_MODEL): reject unknown value and checks
	  pthread.h only when pthread.  [ruby-core:23577]

Thu May 28 03:47:46 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sample/optparse/opttest.rb: typo fixed.  [ruby-dev:38544]

Thu May 28 03:43:10 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (time_strftime): update RDoc according to info from
	  Marc-Andre Lafortune in [ruby-core:23575].  [ruby-core:23564]

Thu May 28 02:40:54 2009  Tanaka Akira  <akr@fsij.org>

	* lib/uri: don't set @parser if it is DEFAULT_PARSER for marshaling
	  URI objects between Ruby 1.8 and Ruby 1.9.
	  [ruby-dev:38377]

Wed May 27 23:00:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (struct parser_params): lex_gets_ptr should be long.

Wed May 27 18:00:15 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigand_int): new function to calculate bignum and
	  fixnum without allocating internal bignum.

	* bignum.c (bigor_int): ditto.

	* bignum.c (bigxor_int): ditto.

	* bignum.c (bigand_int): even less object allocation.
